stops backgrounds from overlapping

--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ svg {
 svg.top-speed-chart {
 
 }
+
 #background-3 {
   position: absolute;
-  top: 1000px;
+  top: 2500px;
   width: 100%;
   height: 700px;
   background-repeat: no-repeat;
@@ -129,7 +130,7 @@ svg.top-speed-chart {
 
 #section-3 {
   position: absolute;
-  top: 1700px;
+  top: 3200px;
   left: 0;
   right: 0;
   height: 800px;
